--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
-<title>futbol</title>
+ <meta charset="UTF-8" />
+ <meta name="viewport" content="width-device-width, initial-scale=1.0" />
+ <link rel="stylesheet" href="style.css" />
+<title>Browser</title>
  <p> En esta linea se describe el titulo </p>
 </head>
