--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
  <meta name="viewport" content="width-device-width, initial-scale=1.0" />
  <link rel="stylesheet" href="style.css" />
 <title>Browser</title>
- <p> En esta linea se describe el titulo </p>
+ <h1> Supuesto titulo </h1>
+ <p> Esta pagina </p>
 </head>
