--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
  <link rel="stylesheet" href="style.css" />
 <title>Browser</title>
  <h1> Supuesto titulo </h1>
- <p>En este espacio se dedica especialmente a discutir sobre futbol y todas las noticias relacionadas</p>
+ <p>en este espacio se dedica especialmente a discutir sobre futbol y todas las noticias relacionadas</p>
 </head>
