--- a/index.html
+++ b/index.html
@@ -7,5 +7,17 @@
  <link rel="stylesheet" href="style.css" />
 <title>Browser</title>
  <h1> Supuesto titulo </h1>
- <p>en este espacio se dedica especialmente a discutir sobre futbol y todas las noticias relacionadas</p>
+ <p>
+  en este espacio se dedica especialmente a discutir sobre futbol y todas las noticias relacionadas
+ </p>
 </head>
+<body>
+ <h1>
+  Write, edit and run HTML, CSS and JAVAScript code online.
+ </h1>
+ <p>
+  Our HTML editor updates the webview automatically in real-time as your write code
+ </p>
+ <script src="scritp.js"></script>
+</body>
+</html>
