--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <title>Browser</title>
  <h1> Supuesto titulo </h1>
  <p>
-  en este espacio se dedica especialmente a discutir sobre futbol y todas las noticias relacionadas
+  Esta pagina se dedica especialmente a discutir sobre futbol y todas las noticias relacionadas
  </p>
 </head>
 <body>
