--- a/index.html
+++ b/index.html
@@ -1,23 +1,56 @@
-<!Doctype html>
-<html lang="en">
-
+<!doctype html>
+<html>
 <head>
- <meta charset="UTF-8" />
- <meta name="viewport" content="width-device-width, initial-scale=1.0" />
- <link rel="stylesheet" href="style.css" />
-<title>Browser</title>
- <h1> Supuesto titulo </h1>
- <p>
-  Esta pagina se dedica especialmente a discutir sobre futbol y todas las noticias relacionadas
- </p>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Documento sin título</title>
+<link href="css/bootstrap-4.4.1.css" rel="stylesheet" type="text/css">
 </head>
+
 <body>
- <h1>
-  Write, edit and run HTML, CSS and JAVAScript code online.
- </h1>
- <p>
-  Our HTML editor updates the webview automatically in real-time as your write code
- </p>
- <script src="scritp.js"></script>
+<ul class="nav nav-tabs">
+  <li class="nav-item"> <a href="https://www.goal.com/es-co/noticias/todos-los-mundiales-de-la-historia-de-1930-a-2026/18jq0g6f7vdp61a1vya8e7uivc" target="new" class="nav-link active">Todos los mundiales</a> </li>
+  <li class="nav-item"> <a href="https://es.wikipedia.org/wiki/Lionel_Messi" target="new" class="nav-link">Lionel Messi</a> </li>
+  <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Menu Desplegable</a>
+    <div class="dropdown-menu"> <a class="dropdown-item" href="#">No disponible</a> <a class="dropdown-item" href="#">No disponible</a>
+      <div class="dropdown-divider"></div>
+      <a class="dropdown-item" href="#">No disponible</a> </div>
+  </li>
+  <li class="nav-item"> <a class="nav-link" href="#">Link</a> </li>
+  <li class="nav-item"> <a class="nav-link disabled" href="#">Disabled</a> </li>
+</ul>
+<script src="js/jquery-3.4.1.min.js"></script>
+<script src="js/popper.min.js"></script>
+<script src="js/bootstrap-4.4.1.js"></script>
+<div class="carousel slide" data-ride="carousel" style="background-color: grey">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators1" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators1" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators1" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner" role="listbox">
+    <div class="carousel-item active"> <img class="d-block mx-auto" src="images/001.jpg" alt="First slide">
+      <div class="carousel-caption">
+        <h5>Estadio BBVA de Guadalupe</h5>
+        <p>Mexico</p>
+      </div>
+    </div>
+    <div class="carousel-item"> <img class="d-block mx-auto" src="images/002.jpg" alt="Second slide">
+      <div class="carousel-caption">
+        <h5>Hard Rock Stadium</h5>
+        <p>Miami, USA</p>
+      </div>
+    </div>
+    <div class="carousel-item"> <img class="d-block mx-auto" src="images/003.jpg" alt="Third slide">
+      <div class="carousel-caption">
+        <h5>Third slide Heading</h5>
+        <p>Third slide Caption</p>
+      </div>
+    </div>
+  </div>
+<a class="carousel-control-prev" href="#carouselExampleIndicators1" role="button" data-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true"></span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#carouselExampleIndicators1" role="button" data-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"></span> <span class="sr-only">Next</span> </a> </div>
+<div> <p> En este modelo de Bootstrap, inserté un menú automático que modifiqué especialmenteo con información sobre los mundiales y el mejor jugador de fúlbol, llevándonos a otras direcciones externas. Adicionalmente, inserté y modifiqué un bootstrap que me permite mostrar imágenes que cambian automáticamente. </p>
+</div>
 </body>
 </html>
